--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "format": "prettier '**/*.ts' --write",
     "typecheck": "tsc --noEmit",
     "prerealease": "bun run build",
-    "release": "standard-version",
+    "release": "changeset",
+    "version": "changeset version",
+    "publish": "bun run build && changeset publish",
     "pretest": "bun run lint && bun run format",
     "precheck": "bun run pretest && bun run typecheck",
     "preinstall": "bunx only-allow bun",
@@ -45,6 +47,7 @@
     "postpublish": "bun run clean"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.0",
     "@types/bun": "latest",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -57,8 +60,7 @@
     "eslint-plugin-unicorn": "^51.0.1",
     "fast-glob": "^3.3.2",
     "only-allow": "^1.2.1",
-    "prettier": "^3.2.5",
-    "standard-version": "^9.5.0"
+    "prettier": "^3.2.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
